Major refactor and cleanup preparing for Solr nested documents