@@ -1,14 +1,11 @@
 package edu.tamu.scholars.discovery.export.service;
 
-import static edu.tamu.scholars.discovery.discovery.DiscoveryConstants.NESTED_DELIMITER;
-
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.apache.commons.csv.CSVFormat;
 import org.apache.commons.csv.CSVPrinter;
@@ -18,9 +15,8 @@ import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBo
 import reactor.core.publisher.Flux;
 
 import edu.tamu.scholars.discovery.config.model.ExportConfig;
-import edu.tamu.scholars.discovery.discovery.exception.InvalidValuePathException;
-import edu.tamu.scholars.discovery.discovery.model.Individual;
 import edu.tamu.scholars.discovery.export.argument.ExportArg;
+import edu.tamu.scholars.discovery.index.model.Individual;
 import edu.tamu.scholars.discovery.utility.DateFormatUtility;
 
 @Service
@@ -66,7 +62,7 @@ public class CsvExporter implements Exporter {
                 .build();
             List<String> properties = export.stream()
                 .map(e -> e.getField())
-                .collect(Collectors.toList());
+                .toList();
             try (CSVPrinter printer = new CSVPrinter(outputStreamWriter, format)) {
                 individuals.doOnComplete(() -> {
                     try {
@@ -80,10 +76,7 @@ public class CsvExporter implements Exporter {
                         try {
                             List<Object> row = getRow(individual, properties);
                             printer.printRecord(row.toArray(new Object[row.size()]));
-                        } catch (IllegalArgumentException
-                            | IllegalAccessException
-                            | InvalidValuePathException
-                            | IOException e
+                        } catch (IllegalArgumentException | IOException e
                         ) {
                             e.printStackTrace();
                             throw new RuntimeException("Failed mapping and printing individuals", e);
@@ -102,7 +95,7 @@ public class CsvExporter implements Exporter {
     }
 
     private String[] getColumnHeaders(List<ExportArg> export) {
-        List<String> columnHeaders = new ArrayList<String>();
+        List<String> columnHeaders = new ArrayList<>();
         for (ExportArg exp : export) {
             columnHeaders.add(exp.getLabel());
         }
@@ -112,9 +105,9 @@ public class CsvExporter implements Exporter {
     private List<Object> getRow(
         Individual individual,
         List<String> properties
-    ) throws InvalidValuePathException, IllegalArgumentException, IllegalAccessException {
+    ) throws IllegalArgumentException {
         Map<String, Object> content = individual.getContent();
-        List<Object> row = new ArrayList<Object>();
+        List<Object> row = new ArrayList<>();
         for (String property : properties) {
             if (property.equals(config.getIndividualKey())) {
                 row.add(String.format("%s/%s", config.getIndividualBaseUri(), individual.getId()));
@@ -132,11 +125,9 @@ public class CsvExporter implements Exporter {
                     @SuppressWarnings("unchecked")
                     List<String> values = (List<String>) value;
 
-                    if (values.size() > 0) {
+                    if (!values.isEmpty()) {
                         data = String.join(DELIMITER, values.stream()
-                            .map(v -> (String) v)
-                            .map(this::serialize)
-                            .collect(Collectors.toList()));
+                            .toList());
                     }
 
                 } else if (Date.class.isAssignableFrom(value.getClass())) {
@@ -145,15 +136,9 @@ public class CsvExporter implements Exporter {
                     data = (String) value;
                 }
             }
-            row.add(serialize(data));
+            row.add(data);
         }
         return row;
-    }
-
-    private String serialize(String value) {
-        return value.contains(NESTED_DELIMITER)
-            ? value.substring(0, value.indexOf(NESTED_DELIMITER))
-            : value;
     }
 
 }
